--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,13 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_executable(secure-blockchain src/main.cpp)
+find_package(OpenSSL REQUIRED)
+
+add_executable(secure-blockchain
+    src/main.cpp
+    src/crypto_utils.cpp
+)
+
+target_include_directories(secure-blockchain PRIVATE src)
+
+target_link_libraries(secure-blockchain PRIVATE OpenSSL::Crypto)
