feat(wallet): implement RSA keypair wallet with AES-encrypted private key + save/load
add Wallet API for creating, loading, saving, and signing with encrypted private keys
implement AES-256-CBC encryption, PBKDF2 key derivation, base64 helpers, and file persistence
integrate wallet demo flow into main executable and hook new module into build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(OpenSSL REQUIRED)
 add_executable(secure-blockchain
     src/main.cpp
     src/crypto_utils.cpp
+    src/wallet.cpp
 )
 
 target_include_directories(secure-blockchain PRIVATE src)
