Add  blockchain and block implementation
Block and Blockchain classes with mining, transaction handling, and JSON serialization/deserialization. Adds CLI functionality for wallet management, transaction creation, mining, and chain validation. Updates CMakeLists.txt to include new source files and adds a sample chain.json data file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ add_executable(secure-blockchain
     src/main.cpp
     src/crypto_utils.cpp
     src/transaction.cpp
+    src/block.cpp
+    src/blockchain.cpp
 
 )
 
